// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementCard renders correct snapshot 1`] = `
<div>
  <div
    class="DescribeElementCard-shadedCard-2"
  >
    <div
      class="DescribeElementCard-cardContentWrapper-3"
    >
      <div>
        DescribeElementCardBanner mock 
        {"icon":"people","title":"expectedTitle"}
      </div>
      <div>
        DescribeElementCardBody mock 
        {"content":"expectedContent"}
      </div>
    </div>
  </div>
</div>
`;

exports[`DescribeElementCard renders correct snapshot with switches 1`] = `
<div>
  <div
    class="DescribeElementCard-card-5"
  >
    <div
      class="DescribeElementCard-quoteCardContentWrapper-8"
    >
      <div>
        DescribeElementCardBody mock 
        {"content":"moreContent","media":true,"quote":true}
      </div>
      <div>
        DescribeElementCardBanner mock 
        {"title":"expectedTitle","quote":true}
      </div>
      <div>
        DescribeElementCardLinks mock 
        {"links":[{"displayName":"displayName","href":"address"}]}
      </div>
    </div>
  </div>
</div>
`;
